# liver-registration

./: .gitignore  README.md  configure.bat  cropped_ws.iws  environment.yml  install_packeges.bat  setup.py  setup.sh
2d-unet-dice-computer/: compute_dice.py  dice.py  evaluate.py
2d-unet-liver-ct/: configuration.json  data_loader.py  infere.py  infere_low_dose.py  infere_lowdose.py  infere_lowdose_corrected.py  main.py  run.py  scan_decathlon.py
2d-unet-liver-ct-traced/: clean.sh  helper.py  infere_lowdose_corrected.py  main.py  run.py
2d-unet-simple/: README.md  unet.py  utils.py
data-preprocessing/osiirix-roi-loader/: XMLPlistToStruct2.m  roiLoader.m
data-preprocessing/slice-viewer/: filtertool.fig  filtertool.m
exported-results/12131637/: etc.txt
exported-results/12151321/: etc.txt
imfusion-inference/: 3d-TEST-10.configtxt  3d-TEST-20.configtxt  READ.txt  README.rst  liver-coarse.configtxt  liver-lowdose-corrected.configtxt  liver-lowdose.configtxt  liver.configtxt  lowdose-liver - copia.configtxt  lowdose-liver.configtxt  model-parent.configtxt  mri-liver.configtxt
imfusion-plugin/: .gitignore  README.md  update-admin.lnk  update.bat
imfusion-plugin/logger-plugin/: CMakeLists.txt  LoggerAlgorithm.cpp  LoggerAlgorithm.h  LoggerController.cpp  LoggerController.h  LoggerController.ui  LoggerFactory.cpp  LoggerFactory.h  LoggerPlugin.cpp  LoggerPlugin.h
imfusion-plugin/sirt-plugin/: CMakeLists.txt  SirtAlgorithm.cpp  SirtAlgorithm.h  SirtController.cpp  SirtController.h  SirtController.ui  SirtFactory.cpp  SirtFactory.h  SirtPlugin.cpp  SirtPlugin.h
kri-evaluation/: .gitignore  KRI Liver Segmentation Evaluation v1.xlsx  plugin-volumetry-ct.txt  plugin-volumetry-lowdose-v1.txt  plugin-volumetry-mri-dices-v1.txt  plugin-volumetry-mri-v1.txt
kri-evaluation/workspaces/: 1.iws  (+6 more)
lib/: test.py
nn-develop/: README.md  data_loader.py  env-settings.json  test_data_loader.py  utils.py  utils_visual.py
osiirix-roi-loader/: cSTRING.m  loadXMLPlist.m
registration-landmarks/: README.md  make.py
registration-landmarks-refined/: .gitignore  landmarks-fine.json
registration-params/: .gitignore  README.md  helper.py  landmarks-fine.json  landmarks-markus.json  landmarks-msi-fine.json  landmarks-msi.json  landmarks.json  robust_params.py  robust_run.py  run.bat  run.py  run_all_fine.bat  run_deformable.bat  run_linear.bat  run_linear_deformable.bat  run_robust.py  run_sub_study.bat  utils.py  ws.iws
simple-2d-unet/: README.md  TODO  configuration.json  data_loader.py  enviroment.yml  environment.yml  formater.py  helper.py  infere.py  infere_low_dose.py  loss.py  main.py  requirements.txt  run.py  run.sh  scan_decathlon.py  train.py  unet.py  utils.py
simulate-lowdose/: 006_low_dose.dcm  add_noise.m  add_noise.py  add_noise_decathlon.py  lowdose-roi-comparison.xlsx  noise_script.m  shepp.png_noise.tif  test2.tif_noise.tif
slice-viewer/: FBM_alternativo.m  bifilt1_c.m  bilateral3D_alternativo.m  binomf.m  dcmshow.fig  dcmshow.m
tester/: NOTES  README.md  Tester.lnk  keydetector.py  log_reader.py  main.py  process.py  tester.bat  viewer.py  widgets.py  window.ui
(+441 files in other folders)
